# pacman_vision_communications

./: CMakeLists.txt  package.xml
msg/: pe.msg
srv/: acquire.srv  clusterize.srv  estimate.srv  get_cloud_in_hand.srv  get_scene.srv  grasp_verification.srv  reload_transform.srv  reset_model.srv  save_model.srv  start_modeler.srv  stop_modeler.srv  stop_modeler_recording.srv  stop_track.srv  track_object.srv
